--- a/css/styles.css
+++ b/css/styles.css
@@ -734,7 +734,8 @@ padding: 96px 0;
 
 @media screen and (min-width: 1158px){
 .container.feat-container{
-
+    padding-right: 15x;
+    padding-left: 15px;
     max-width: 1158px;
 }
     .features.section{
@@ -793,9 +794,9 @@ padding: 96px 0;
 
 /* Our Team Mobile */
 
- .team.section {
+ .team-container {
 
-     padding: 96px 0;
+      padding: 96px 0; 
 
  }
 .team {
@@ -814,6 +815,7 @@ padding: 96px 0;
 .team-list {
 
     display: flex;
+    justify-content: center;
         width: 100%;
         flex-wrap: wrap;
         gap: 72px;
@@ -890,20 +892,13 @@ padding: 96px 0;
 
 @media screen and (min-width:768px){
     .team-container{
-        padding-left: 108px;
-        padding-right: 108px;
+        
     }
-    .team.section {
-    
-            padding: 96px 0;
-    
-        }
-    
-        .team {
+    .team {
             background-color: #F4F4FD;
         }
     
-        .team-title {
+    .team-title {
             font-weight: 700;
             font-size: 36px;
             line-height: 1.11;
@@ -914,7 +909,7 @@ padding: 96px 0;
             margin-bottom: 72px;
         }
     
-        .team-list {
+    .team-list {
     
             display: flex;
             justify-content: center;
@@ -925,12 +920,12 @@ padding: 96px 0;
         }
     
     
-        .name-prof {
+    .name-prof {
             padding: 32px 0
         }
     
     
-        .team-item {
+    .team-item {
             border-radius: 0px 0px 4px 4px;
             background-color: #FFFFFF;
             box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
@@ -939,7 +934,7 @@ padding: 96px 0;
     
         }
     
-        .name-title {
+    .name-title {
             font-weight: 500;
             font-size: 20px;
             line-height: 1.2;
@@ -950,7 +945,7 @@ padding: 96px 0;
             margin-bottom: 8px;
         }
     
-        .prof-info {
+    .prof-info {
             font-weight: 400;
             font-size: 16px;
             line-height: 1.5;
@@ -959,7 +954,7 @@ padding: 96px 0;
             color: #434455;
         }
     
-        .social-list {
+    .social-list {
             display: flex;
             justify-content: center;
             gap: 24px;
@@ -968,9 +963,9 @@ padding: 96px 0;
     
         }
     
-        .social-list-item {}
+    .social-list-item {}
     
-        .social-list-link {
+    .social-list-link {
             background-color: #4d5ae5;
             border-radius: 50%;
             display: flex;
@@ -981,12 +976,12 @@ padding: 96px 0;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     
-        .social-list-link:hover,
-        .social-list-link:focus {
+    .social-list-link:hover,
+    .social-list-link:focus {
             background-color: #404bbf;
         }
     
-        .social-list-icons {
+    .social-list-icons {
             fill: #f4f4fd;
         }
 }
@@ -1272,6 +1267,7 @@ padding: 96px 0;
     align-items: center; 
     flex-wrap: wrap;
     flex-direction: row;
+    margin-bottom: 72px;
 }
 .footer-logo{
     display: flex;
@@ -1288,7 +1284,6 @@ padding: 96px 0;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-margin-bottom: 72px;
 }
 .soc-med-info {
     display: flex;
@@ -1305,7 +1300,6 @@ margin-bottom: 72px;
 .social-list-foot {
     display: flex;
     gap: 16px;
-    margin-bottom: 72px;
 }
 .social-list-item-foot {
     width: 40px;
@@ -1426,7 +1420,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     max-width: 768px;
     justify-content: center;
     align-items: center;
-    /* margin: 0 auto; */
+   
 }
 .footer-logo{
     justify-content: left;
@@ -1461,15 +1455,18 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .footer-container {
     display: flex;
-max-width: 1158px;
+    max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
     align-items: baseline;
     column-gap: 0;
-    /* margin-right: 120px; */
+
 }
 .foot-logo-cont{
     margin-right: 120px;
+} 
+.form-sub-input{
+    margin-bottom: 0;
 }
 .subscribe-cont {
 
@@ -1729,9 +1726,6 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 .modal{
     width: 408px;
 }
-
-
-
-
-    
 }
+
+                              /* #endregion MODAL */
